name:                redwood
version:             0.1.0.0
author:              Connor Cahoon, Sam Schweigel
build-type:          Simple

executable redwood
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.14
                     , containers
                     , gloss == 1.13.2.1
                     , megaparsec
                     , mtl >= 2.2.2
                     , parser-combinators
                     , random
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Interpreter
                     , Parser
                     , Syntax
                     , Utils
                     , Runtime
                     , Graphics
