name:                small-programming-language
version:             0.1.0.0
license-file:        LICENSE
author:              Connor Cahoon, Sam Schweigel
build-type:          Simple

executable small-programming-language
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
                     , containers
                     , megaparsec
                     , mtl >= 2.2.2
                     , parser-combinators
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Syntax
